tests/transpiler/x/py/update_stmt.error
run: exit status 1
Traceback (most recent call last):
  File "/workspace/mochi/tests/transpiler/x/py/update_stmt.py", line 13, in <module>
    item["status"] = "adult"
    ~~~~^^^^^^^^^^
TypeError: 'Person' object does not support item assignment
